# briefs

./: .gitignore  Cargo.toml  README.md
auth/demo1/: PKI-SETUP.md  demo-CA-CSR.csr  demo-CA-certificate.arm  demo-CA-pkey.key  demo-pkey-CSR.csr  demo-pkey-certificate.arm  demo-pkey.key
auth/keys/: PKI-setup.md  cert.pem  key.csr  key.pem  localhost.ext  rootCA.crt  rootCA.key  rootCA.srl
crates/briefs-core/: Cargo.toml  README.md
crates/briefs-core/examples/: oneshot-demo.rs
crates/briefs-core/src/: config.rs  config_file.rs  db.rs  error.rs  lib.rs  post.rs  state.rs  stream.rs  utils.rs
crates/briefs-json/: Cargo.toml
crates/briefs-json/src/: lib.rs  state.rs
crates/briefs-proto/: Cargo.toml
crates/briefs-proto/protos/: def.proto
crates/catchup-core/: Cargo.toml
crates/catchup-core/src/: error.rs  lib.rs  state.rs  stream.rs
crates/catchup-json/: Cargo.toml
crates/catchup-json/src/: state.rs
crates/catchup-proto/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: post.rs  stream.rs
crates/server/: Cargo.toml  mydb.db
crates/server/examples/: magic-crypt.rs  tokio-rustls-client.rs
crates/server/src/: error.rs  interfaces.rs  lib.rs  main.rs
src/: client.rs  error.rs  lib.rs  main.rs  post.rs  stream.rs
