[package]
name = "briefs-json"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
briefs-core = { path = "../briefs-core" }
