[package]
name = "catchup-core"
version = "0.2.0"
edition = "2021"
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textwrap = { version = "0.16.0", features = ["default"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0.107"
clap = { version = "4.4.6", features = ["derive"] }
toml = { version = "0.8.2" }
