[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true

[dependencies]
briefs-core = { path = "../briefs-core/" }
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0.107"
serde = { version = "1.0.163" }
anyhow = "1.0.89"
thiserror = "2.0.3"
sqlite = "0.36.1"
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8.5"
semver = "1.0.23"

[dev-dependencies]
argh = "0.1.13"
magic-crypt = { version = "4.0.1" }
tokio-rustls = "0.26.1"
webpki-roots = "0.26.7"
